added f?art added colors added f?help added polymorphism added more polymorphism fixed bug with reacts added message deletion improved error messages added bulk addalias added easter egg added simple space parsing added devs added donate added enemy heroes improved merges probably fixed a bunch of other stuff i dont remember

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 *.pyproj
 *.db
 *.db-journal
+__pycache__
 xanderbot.pyperf
 xanderbot/.pylintrc
 xanderbot/.mypy_cache
-__pycache__
+xanderbot/easter_egg.py
 tokens.txt
